fix background on mobile, alignment & spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
 main {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  padding: 1em;
 
   color: ivory;
-  height: 100vh;
-  width: 65vw;
-  margin: 0 auto;
+  
+  padding: 1em;
 }
