--- a/src/index.css
+++ b/src/index.css
@@ -28,12 +28,7 @@ a:hover {
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
-
+  min-height: 100vh;
   background-image: linear-gradient(
     30deg,
     rgba(11, 102, 35, 0.75),
